Add optional text to form processing animation

--- a/src/assets/components/ui/fb-modal-form.scss
+++ b/src/assets/components/ui/fb-modal-form.scss
@@ -1,7 +1,9 @@
 @import "../../variables/colors";
+@import "../../variables/screen";
 @import "../../mixins/utilities";
 
-$result-background-color:             $bg-color-body;
+$result-bg-color:                     $bg-color-body;
+$result-z-index:                      $zindex-modal;
 
 @mixin form-flex {
   @include flexColumn;
