--- a/src/assets/components/ui/fb-result-err.scss
+++ b/src/assets/components/ui/fb-result-err.scss
@@ -1,5 +1,8 @@
 @import "../../variables/colors";
+@import "../../variables/layout";
 @import "../../variables/sizes";
 
-$color:                               $color-danger;
-$icon-width:                          $icon-height-lg;
+$result-color:                        $color-danger;
+$result-icon-width:                   $icon-height-lg;
+
+$result-content-margin:               $margin-sm;
