--- a/src/components/ui/FbResultOk/index.scss
+++ b/src/components/ui/FbResultOk/index.scss
@@ -2,9 +2,10 @@
 
 .fb-ui-result-ok {
   &__container {
-    width: $icon-width;
+    width: $result-icon-width;
     display: block;
     margin: 0 auto;
+    text-align: center;
 
     svg {
       width: 100%;
@@ -16,7 +17,7 @@
         fill: none;
         stroke-dasharray: 1000;
         stroke-dashoffset: 0;
-        stroke: $color;
+        stroke: $result-color;
         stroke-width: 6;
         stroke-miterlimit: 10;
       }
@@ -33,6 +34,10 @@
         animation: fb-ui-result-ok-dash-check 0.9s 0.35s ease-in-out forwards;
       }
     }
+  }
+
+  &__content {
+    margin-top: $result-content-margin;
   }
 }
 
