Make loader optional and overwritable

--- a/src/assets/components/ui/fb-modal-window.scss
+++ b/src/assets/components/ui/fb-modal-window.scss
@@ -30,11 +30,7 @@ $modal-size-sm:                       30rem;
 $modal-size-md:                       60rem;
 $modal-size-lg:                       90rem;
 
-$modal-loader-width:                  25rem;
-$modal-loader-bg-color:               #fff;
-
-$logo-color-primary:                  $color-brand-primary;
-$logo-color-secondary:                $color-brand-secondary;
+$modal-loader-bg-color:               $bg-color-body;
 
 $screen-tablet-min:                   $screen-sm-min;
 
