--- a/src/assets/components/ui/fb-loading-box.scss
+++ b/src/assets/components/ui/fb-loading-box.scss
@@ -3,16 +3,14 @@
 @import "../../variables/texts";
 @import "../../mixins/utilities";
 
-$loading-font-family:                 $font-family-base;
-$loading-padding:                     3rem;
-
-$loading-icon-margin:                 $margin-sm;
-$loading-content-margin:              $margin-sm;
-
-$loading-font-size-sm:                $font-size-base;
-$loading-font-size-md:                $font-size-base;
-$loading-font-size-lg:                $font-size-base;
+$loading-font-family: $font-family-base;
+$loading-padding: 3rem;
+$loading-icon-margin: $margin-sm;
+$loading-content-margin: $margin-sm;
+$loading-font-size-sm: $font-size-base;
+$loading-font-size-md: $font-size-base;
+$loading-font-size-lg: $font-size-base;
 
 @mixin flex-icon {
-  @include flexRow(nowrap);
+  @include flex-row(nowrap);
 }
