--- a/src/assets/components/ui/fb-modal-form.scss
+++ b/src/assets/components/ui/fb-modal-form.scss
@@ -2,9 +2,9 @@
 @import "../../variables/screen";
 @import "../../mixins/utilities";
 
-$result-bg-color:                     $bg-color-body;
-$result-z-index:                      $zindex-modal;
+$result-bg-color: $bg-color-body;
+$result-z-index: $zindex-modal;
 
 @mixin form-flex {
-  @include flexColumn;
+  @include flex-column;
 }
