--- a/src/components/forms/FbInput/index.scss
+++ b/src/components/forms/FbInput/index.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @import "../../../assets/components/form/fb-input";
 
 .fb-form-input {
@@ -89,7 +90,7 @@
       @include input-error-shadow;
 
       &:focus {
-        border-color: darken($input-border-color-error, 10%);
+        border-color: color.adjust($input-border-color-error, $lightness: -10%);
 
         @include input-error-focus-shadow;
       }
