--- a/src/components/forms/FbTextArea/index.scss
+++ b/src/components/forms/FbTextArea/index.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @import "../../../assets/components/form/fb-text-area";
 
 .fb-form-textarea {
@@ -62,7 +63,7 @@
       @include textarea-error-shadow;
 
       &:focus {
-        border-color: darken($input-border-color-error, 10%);
+        border-color: color.adjust($input-border-color-error, $lightness: -10%);
 
         @include textarea-error-focus-shadow;
       }
