--- a/src/assets/components/layout/fb-sidebar.scss
+++ b/src/assets/components/layout/fb-sidebar.scss
@@ -1,19 +1,17 @@
 @import "../../variables/screen";
 @import "../../mixins/utilities";
 
-$z-index:                             1050 !default;
-$z-index-overlay:                     9998 !default;
-
-$sidebar-color:                       #a6a6a6;
-$sidebar-background-color:            #222;
-$sidebar-width:                       22rem;
-$sidebar-collapsed-width:             6rem;
-$sidebar-phone-width:                 24rem;
-
-$screen-phone-max:                    $screen-xs-max;
-$screen-tablet-min:                   $screen-sm-min;
-$screen-desktop-max:                  $screen-md-max;
+$z-index: 1050 !default;
+$z-index-overlay: 9998 !default;
+$sidebar-color: #a6a6a6;
+$sidebar-background-color: #222;
+$sidebar-width: 22rem;
+$sidebar-collapsed-width: 6rem;
+$sidebar-phone-width: 24rem;
+$screen-phone-max: $screen-xs-max;
+$screen-tablet-min: $screen-sm-min;
+$screen-desktop-max: $screen-md-max;
 
 @mixin flex-inner {
-  @include flexColumn(nowrap);
+  @include flex-column(nowrap);
 }
