--- a/src/assets/components/ui/fb-divider.scss
+++ b/src/assets/components/ui/fb-divider.scss
@@ -1,13 +1,11 @@
 @use "sass:math";
-
 @import "../../variables/screen";
 @import "../../variables/texts";
 
-$divider-font-family:                 $font-family-base;
-$divider-font-size:                   $font-size-base;
-$divider-size:                        1px !default;
-$divider-size-half:                   ceil(math.div($divider-size, 2)) !default;
-$divider-margin:                      2rem 0;
-$divider-color:                       #ddd;
-
-$screen-tablet-min:                   $screen-sm-min;
+$divider-font-family: $font-family-base;
+$divider-font-size: $font-size-base;
+$divider-size: 1px !default;
+$divider-size-half: math.ceil(math.div($divider-size, 2)) !default;
+$divider-margin: 2rem 0;
+$divider-color: #ddd;
+$screen-tablet-min: $screen-sm-min;
