--- a/src/assets/components/ui/fb-media-item.scss
+++ b/src/assets/components/ui/fb-media-item.scss
@@ -1,12 +1,12 @@
 @import "../../mixins/utilities";
 @import "../../variables/texts";
 
-$media-font-family:                   $font-family-base;
-$media-font-size:                     $font-size-base;
-$media-heading-margin:                0;
-$media-heading-font-size:             2.5rem;
-$media-heading-line-height:           2.5rem;
+$media-font-family: $font-family-base;
+$media-font-size: $font-size-base;
+$media-heading-margin: 0;
+$media-heading-font-size: 2.5rem;
+$media-heading-line-height: 2.5rem;
 
 @mixin flex-media {
-  @include flexRow;
+  @include flex-row;
 }
