--- a/src/components/ui/FbComponentLoading/index.scss
+++ b/src/components/ui/FbComponentLoading/index.scss
@@ -26,7 +26,7 @@
 
       .fb-ui-component-loading {
         &__icon {
-          @include flexBoxWidth($loader-icon-size-lg);
+          @include flex-box-width($loader-icon-size-lg);
         }
 
         &__text {
@@ -42,7 +42,7 @@
 
       .fb-ui-component-loading {
         &__icon {
-          @include flexBoxWidth($loader-icon-size-md);
+          @include flex-box-width($loader-icon-size-md);
         }
 
         &__text {
@@ -58,7 +58,7 @@
 
       .fb-ui-component-loading {
         &__icon {
-          @include flexBoxWidth($loader-icon-size-sm);
+          @include flex-box-width($loader-icon-size-sm);
         }
 
         &__text {
