--- a/src/components/ui/FbComponentLoadingError/index.scss
+++ b/src/components/ui/FbComponentLoadingError/index.scss
@@ -22,7 +22,7 @@
 
       .fb-ui-component-loading-error {
         &__icon {
-          @include flexBoxWidth($loader-icon-size-lg);
+          @include flex-box-width($loader-icon-size-lg);
 
           svg {
             margin: 0 auto;
@@ -44,7 +44,7 @@
 
       .fb-ui-component-loading-error {
         &__icon {
-          @include flexBoxWidth($loader-icon-size-md);
+          @include flex-box-width($loader-icon-size-md);
 
           svg {
             margin: 0 auto;
@@ -66,7 +66,7 @@
 
       .fb-ui-component-loading-error {
         &__icon {
-          @include flexBoxWidth($loader-icon-size-sm);
+          @include flex-box-width($loader-icon-size-sm);
 
           svg {
             margin: 0 auto;
