--- a/src/components/ui/FbSwitchElement/index.scss
+++ b/src/components/ui/FbSwitchElement/index.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-
+@use "sass:color";
 @import "../../../assets/components/ui/fb-switch-element";
 
 /* stylelint-disable no-descending-specificity */
@@ -70,7 +70,7 @@
       input {
         ~ .fb-ui-switch-element__track {
           background-color: $track-background-color;
-          border-radius: ceil(math.div($switch-height-lg, 2));
+          border-radius: math.ceil(math.div($switch-height-lg, 2));
         }
 
         ~ .fb-ui-switch-element__thumb {
@@ -87,7 +87,7 @@
 
         &:disabled {
           ~ .fb-ui-switch-element__track {
-            background-color: lighten($track-background-color, 30%);
+            background-color: color.adjust($track-background-color, $lightness: 30%);
             cursor: not-allowed;
           }
 
@@ -111,7 +111,7 @@
       input {
         ~ .fb-ui-switch-element__track {
           background-color: $track-background-color;
-          border-radius: ceil(math.div($switch-height-md, 2));
+          border-radius: math.ceil(math.div($switch-height-md, 2));
         }
 
         ~ .fb-ui-switch-element__thumb {
@@ -128,12 +128,12 @@
 
         &:disabled {
           ~ .fb-ui-switch-element__track {
-            background-color: lighten($track-background-color, 30%);
+            background-color: color.adjust($track-background-color, $lightness: 30%);
             cursor: not-allowed;
           }
 
           ~ .fb-ui-switch-element__thumb {
-            border-color: lighten($thumb-border-color, 30%);
+            border-color: color.adjust($thumb-border-color, $lightness: 30%);
             cursor: not-allowed;
           }
 
@@ -153,7 +153,7 @@
       input {
         ~ .fb-ui-switch-element__track {
           background-color: $track-background-color;
-          border-radius: ceil(math.div($switch-height-sm, 2));
+          border-radius: math.ceil(math.div($switch-height-sm, 2));
         }
 
         ~ .fb-ui-switch-element__thumb {
@@ -170,12 +170,12 @@
 
         &:disabled {
           ~ .fb-ui-switch-element__track {
-            background-color: lighten($track-background-color, 30%);
+            background-color: color.adjust($track-background-color, $lightness: 30%);
             cursor: not-allowed;
           }
 
           ~ .fb-ui-switch-element__thumb {
-            border-color: lighten($thumb-border-color, 30%);
+            border-color: color.adjust($thumb-border-color, $lightness: 30%);
             cursor: not-allowed;
           }
 
